--- a/jquery-Mobile.html
+++ b/jquery-Mobile.html
@@ -10,17 +10,17 @@
 
     <div class="form">
 
-        <div class="button">Anchor</div>
-        <a href="###" class="button">Get</a>
-        <input type="button" value="Test" />
+        <div class="button">Div</div>
+        <a href="###" class="button">Anchor</a>
+        <input type="button" value="Input" />
         <button class="button">button</button>
 
         <div class="clear"></div>
 
 
-        <div class="button inline">Anchor</div>
-        <a href="###" class="button inline">Get</a>
-        <input type="button" class="inline" value="Test" />
+        <div class="button inline">Div</div>
+        <a href="###" class="button inline">Anchor</a>
+        <input type="button" class="inline" value="Input" />
         <button class="button inline">button</button>
 
     </div>
