add checkbox & view list

--- a/jquery-Mobile.html
+++ b/jquery-Mobile.html
@@ -2,26 +2,64 @@
 <html>
 <head>
     <title>Form</title>
-    <link href="css/form.css" rel="stylesheet" type="text/css" />
+    <link href="css/form.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
 
 <div class="button-wrapper">
 
-    <div class="form">
+    <div class="form-buttons">
+
+        <h2> Buttons </h2>
 
         <div class="button">Div</div>
         <a href="###" class="button">Anchor</a>
-        <input type="button" value="Input" />
-        <button class="button">button</button>
+        <input type="button" value="Input"/>
+        <button>button</button>
 
-        <div class="clear"></div>
-
-
+        <input type="button" class="inline" value="Input"/>
+        <button class="inline">button</button>
         <div class="button inline">Div</div>
         <a href="###" class="button inline">Anchor</a>
-        <input type="button" class="inline" value="Input" />
-        <button class="button inline">button</button>
+
+    </div>
+
+    <div class="form-view-list">
+
+        <h2> List views </h2>
+
+        <div class="view-list">
+            <a href="#">asdf</a>
+            <a href="#">asdf</a>
+            <a href="#">asdf</a>
+        </div>
+
+    </div>
+
+    <div class="form-checkbox">
+
+        <h2> checkbox </h2>
+
+        <div class="ui-checkbox">
+            <input type="checkbox">
+            <label>ste</label>
+        </div>
+
+        <div class="checkbox-list">
+            <div class="ui-checkbox">
+                <input type="checkbox">
+                <label>ste</label>
+            </div>
+            <div class="ui-checkbox">
+                <input type="checkbox">
+                <label>ste</label>
+            </div>
+            <div class="ui-checkbox">
+                <input type="checkbox">
+                <label>ste</label>
+            </div>
+        </div>
+
 
     </div>
 
