--- a/jquery-Mobile.html
+++ b/jquery-Mobile.html
@@ -63,6 +63,33 @@
 
     </div>
 
+    <div class="form-radio">
+
+        <h2> radio box list </h2>
+
+        <div class="ui-radio">
+            <input type="radio">
+            <label>ste</label>
+        </div>
+
+        <div class="radio-list">
+            <div class="ui-radio">
+                <input type="radio">
+                <label>ste</label>
+            </div>
+            <div class="ui-radio">
+                <input type="radio">
+                <label>ste</label>
+            </div>
+            <div class="ui-radio">
+                <input type="radio">
+                <label>ste</label>
+            </div>
+        </div>
+
+
+    </div>
+
 
 </div>
 
